[package]
name = "postgres-tx-retry"
description = "Transaction retry helpers for PostgreSQL compatibale databases"
license = "MIT"
version = "0.0.2"
authors = ["Martin Gallagher <martin@praegressus.com>"]
edition = "2021"
keywords = ["postgres", "postgresql", "cockroachdb"]
repository = "https://github.com/martingallagher/postgres-tx-retry.git"
exclude = [".github"]

[package.metadata.docs.rs]
features = ["sync"]

[dependencies]
deadpool = { version = "0.9", optional = true }
deadpool-postgres = { version = "0.10", optional = true }
postgres = { version = "0.19", optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tokio-postgres = { version = "0.7", optional = true }

[features]
default = ["async"]
async = ["deadpool", "deadpool-postgres", "tokio-postgres"]
sync = ["postgres", "r2d2", "r2d2_postgres", "tokio"]
